# llvm-project

llvm/cmake/: config-ix.cmake
llvm/cmake/modules/: HandleLLVMOptions.cmake  TableGen.cmake
llvm/include/llvm/Analysis/: ScalarEvolution.h  ScalarEvolutionExpander.h  ScalarEvolutionExpressions.h
llvm/include/llvm/Config/: abi-breaking.h.cmake
llvm/include/llvm/IR/: IntrinsicsNVVM.td
llvm/include/llvm/TableGen/: Record.h
llvm/lib/Analysis/: IVDescriptors.cpp  ScalarEvolution.cpp  ScalarEvolutionExpander.cpp
llvm/lib/CodeGen/: CodeGenPrepare.cpp
llvm/lib/CodeGen/SelectionDAG/: SelectionDAGBuilder.cpp
llvm/lib/MC/: MCObjectFileInfo.cpp  WinCOFFObjectWriter.cpp
llvm/lib/Support/Unix/: Path.inc
llvm/lib/TableGen/: Record.cpp  TGLexer.cpp  TGLexer.h  TGParser.cpp  TGParser.h
llvm/lib/Transforms/Utils/: VNCoercion.cpp
llvm/test/Transforms/GVN/: non-integral-pointers.ll
llvm/tools/llvm-cfi-verify/: CMakeLists.txt
llvm/tools/llvm-config/: CMakeLists.txt
llvm/tools/llvm-exegesis/: CMakeLists.txt
llvm/unittests/Passes/: CMakeLists.txt
